--- a/pages/projects.html
+++ b/pages/projects.html
@@ -25,6 +25,8 @@
         <a href="dice/index.html">dice</a>
         <a href="mouseFollower/index.html">mouseFollower</a>
         <a href="chemo/index.html"> chemotaxis</a>
+    <br>
+     <a href="http://www.cnn.com"> cnn</a>
 </body>
 
 </html>
