--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Projects</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <link rel="stylesheet" type="text/css" href="../css/reset.css">
 </head>
@@ -21,13 +22,13 @@
         <div class="text2"> Gimp Final</div>
         <div class="text3"> This project was created in GIMP, (off brand photoshop), and it impliments various image manipulation tools.</div>
 
-        <a href="lightning/index.html">lightning</a>
-        <a href="dice/index.html">dice</a>
-        <a href="mouseFollower/index.html">mouseFollower</a>
-        <a href="chemo/index.html"> chemotaxis</a>
+        <a href="lightning/index.html">lightning</a><br>
+        <a href="dice/index.html">dice</a><br>
+        <a href="mouseFollower/index.html">mouseFollower</a><br>
+        <a href="chemo/index.html"> chemotaxis</a><br>
         <a href="http://www.cnn.com"> cnn</a>
 
 
-</body>
 
-</html>
+
+</body></html>
